fee (floyd) 10/25/2002
----------------------
 + Version 4.3.0
 + update spawnStruct
 + update opcode, thanks to all who helped find them
 + update EQDecode class in preparation for a new libEQ, if such time as
   one becomes available
 + update spells.h

casey (10/24/02)
----------------------

added the following maps.
  Poinnovation.map

updated 3 structs and a bunch of opcodes.  I havent personally tested
them, but they seem to be working for the people who are.  If you find
differences, make a diff and post it to the patch section.

casey (10/21/02)
----------------------

added the following maps (from HoiHoi).
  Hohonora.map
  Hohonorb.map
  Nightmareb.map
  Poknowledge.map
  Potranquility.map
  Powar.map
  Solrotower.map

ratt (3 Oct 02)
----------------------

Fixed the max HP bug that was reporting more HP than you really had.

Released ShowEQ v4.2.15 in the file release section.  This is a 
current CVS snapshot as of this moment. (13:00 EST 3 Oct 02)

fee (floyd) (10/03/02)
----------------------
 + version 4.2.15
New Features:
  GuildMgr Class
     captures guilds2.dat from worldserver
     reads the regular eq client guilds2.dat (File->Reload Guilds File)
     dump a plain text list of guild id to guild tag (Debug->List/Dump Guild Info)
     filter and category support for spawnlists(regex on 'Guild:')
     map tip support
     spawnlog support, guild id added as last field in the output
Updates:
    random clean ups
    new guildlist structs
    updated charprofilestruct
    spells.h regenerated from current spells_en.txt
    applied patch[604874] - thanks to Bonkers D Bobcat (bonkersbobcat)

fee (10/09/02)
---------------------
 + updated charProfile struct, includes correct offset for AAXP

casey (08/29/02)
---------------------
 + Corrected the spelling of "Wizard" in interface.cpp

fee (floyd) (08/15/02)
----------------------
 + completion of Vexthal.map

fee (floyd) (08/14/02)
----------------------
Modifications: